objects/vlocity_cmt__RuleAction__c.object
<CustomObject>
    <description>Vlocity Rules drive actions to happen when the rule evaluates to true. Rule actions can define a configuration action, an availability action, an eligibility action, a pricing action or other actions.</description>
    <fields>
        <fullName>vlocity_cmt__CalculationProcedureId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Calculation Procedure</label>
        <referenceTo>vlocity_cmt__CalculationProcedure__c</referenceTo>
        <relationshipLabel>Rule Actions</relationshipLabel>
        <relationshipName>RuleActions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EntityFilterId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entity Filter</label>
        <referenceTo>vlocity_cmt__EntityFilter__c</referenceTo>
        <relationshipLabel>Rule Actions</relationshipLabel>
        <relationshipName>RuleActions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Index__c</fullName>
        <label>Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OfferingProcedureId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offering Procedure</label>
        <referenceTo>vlocity_cmt__OfferingProcedure__c</referenceTo>
        <relationshipLabel>Rule Actions</relationshipLabel>
        <relationshipName>RuleActions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductConfigurationProcedureId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Configuration Procedure</label>
        <referenceTo>vlocity_cmt__ProductConfigurationProcedure__c</referenceTo>
        <relationshipLabel>Rule Actions</relationshipLabel>
        <relationshipName>RuleActions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductConfigurationProcedureProductId__c</fullName>
        <formula>vlocity_cmt__ProductConfigurationProcedureId__r.vlocity_cmt__ProductId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProductConfigurationProcedureProductId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductRelationshipId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Relationship</label>
        <referenceTo>vlocity_cmt__ProductRelationship__c</referenceTo>
        <relationshipLabel>Rule Actions</relationshipLabel>
        <relationshipName>RuleActions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductRelationshipParentId__c</fullName>
        <formula>vlocity_cmt__ProductRelationshipId__r.vlocity_cmt__Product2Id__c</formula>
        <label>ProductRelationshipParentId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RuleId__c</fullName>
        <label>Rule</label>
        <referenceTo>vlocity_cmt__Rule__c</referenceTo>
        <relationshipLabel>Rule Actions</relationshipLabel>
        <relationshipName>RuleActions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Vlocity Rule Action</label>
    <nameField>
        <displayFormat>RA-{00000000}</displayFormat>
        <label>Rule Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vlocity Rule Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>